--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,23 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SecondActivity"
+
+        <!--<activity android:name=".SecondActivity"
             android:parentActivityName=".ThirdActivity">
-        </activity>
-        <activity android:name=".ThirdActivity"></activity>
+        </activity>-->
+
+        <!--android:taskAffinity="com.android.monkey.testparentactivtiy.second"-->
+        <activity android:name=".SecondActivity" />
+
+        <activity android:name=".ThirdActivity"/>
     </application>
 
 </manifest>
